Tried to fix the website overflowing in the x-axis

--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 
 body {    
     background-color: #aacfcf;
     line-height:1.8;
-    width: 100%;
     font-family: 'Montserrat', sans-serif;
 }
 
